# kstars-fork

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.kstars.appdata.xml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.gitlab-ci/: common_rules.yml
.reuse/: dep5
Tests/: CMakeLists.txt
Tests/auxiliary/: auxiliary_tests.cpp  testbinhelper.cpp  testbinhelper.h  testcachingdms.cpp  testcachingdms.h  testcolorscheme.cpp  testcolorscheme.h  testcsvparser.cpp  testcsvparser.h  testdms.cpp  testdms.h  testfov.cpp  testfov.h  testfwparser.cpp  testfwparser.h  testgeolocation.cpp  testgeolocation.h  testkspaths.h  testksuserdb.cpp  testksuserdb.h  testtrixelcache.h
Tests/capture/: test_placeholderpath.cpp  test_placeholderpath.h  test_sequencejobstate.h
Tests/datahandlers/: test_catalogsdb.h
Tests/engine/: CMakeLists.txt  convertCoord.cpp  convertCoord.h  testastrovars.cpp  testastrovars.h  testconvertcoord.cpp  testconvertcoord.h  testkscontext.cpp  testkscontext.h
Tests/fitsviewer/: testfitsdata.cpp  testfitsdata.h
Tests/focus/: testfocus.cpp  testfocusstars.cpp
Tests/internalguide/: testguidestars.cpp  teststarcorrespondence.cpp
Tests/kscl/: CMakeLists.txt  testclconvert.cpp  testksclcontext.cpp  testksclcontext.h
Tests/kstars_lite_ui/: kstars_lite_ui_tests.cpp  kstars_lite_ui_tests.h
Tests/kstars_ui/: CMakeLists.txt  kstars_ui_tests.cpp  kstars_ui_tests.h  mockmodules.cpp  mockmodules.h  test_artificial_horizon.cpp  test_artificial_horizon.h  test_catalog_download.h  test_ekos.cpp  test_ekos.h  test_ekos_align.cpp  test_ekos_align.h  test_ekos_capture.cpp  test_ekos_capture.h  test_ekos_capture_count.cpp  test_ekos_capture_count.h  test_ekos_capture_helper.cpp  test_ekos_capture_helper.h  test_ekos_capture_workflow.cpp  test_ekos_capture_workflow.h  test_ekos_capture_workflow_advanced.cpp  test_ekos_capture_workflow_advanced.h  test_ekos_focus.cpp  test_ekos_focus.h  test_ekos_guide.cpp  test_ekos_guide.h  test_ekos_helper.cpp  test_ekos_helper.h  test_ekos_meridianflip.cpp  test_ekos_meridianflip.h  test_ekos_meridianflip_base.cpp  test_ekos_meridianflip_base.h  test_ekos_meridianflip_specials.cpp  test_ekos_meridianflip_specials.h  test_ekos_meridianflipstate.cpp  test_ekos_meridianflipstate.h  test_ekos_mount.cpp  test_ekos_mount.h  test_ekos_scheduler.cpp  test_ekos_scheduler.h  (+8 more)
Tests/polaralign/: test_polaralign.cpp  test_polaralign.h  test_poleaxis.cpp  test_poleaxis.h
Tests/scheduler/: CMakeLists.txt  new_startup_conditions_test.esl  testschedulerunit.cpp
Tests/skyobjects/: CMakeLists.txt  test_skypoint.cpp  test_skypoint.h  test_starobject.cpp  test_starobject.h
Tests/tools/: testartificialhorizon.cpp  testgreatcircle.cpp
cmake/modules/: FindAstrometryNet.cmake  FindCFitsio.cmake  FindINDI.cmake  FindNova.cmake  FindOpenCV.cmake  FindWCSLIB.cmake  UnityBuild.cmake
data/: CMakeLists.txt
datahandlers/: CMakeLists.txt  catalogdb.cpp  ksparser.cpp  ksparser.h
doc/: credits.docbook
kscl/: CMakeLists.txt  kernels.cl  ksclbuffer.cpp  ksclbuffer.h  ksclbuffer_p.h  ksclcommandqueue.cpp  ksclcommandqueue.h  ksclcontext.cpp  ksclcontext.h  ksclcontext_p.h  ksclevent.cpp  ksclevent.h  ksclkernel.cpp  ksclkernel.h
ksengine/: CMakeLists.txt  astrovars.cpp  astrovars.h  convertcoord.cpp  convertcoord.h  dms.cpp  dms.h  kernels.cl  ksbuffer.cpp  ksbuffer.h  ksbuffer_p.h  ksbuffercl.cpp  ksbuffercl.h  ksbuffereigen.cpp  ksbuffereigen.h  ksclbuffer.cpp  ksclbuffer.h  ksclbuffer_p.h  ksclcontext.cpp  ksclcontext_p.h  kscontext.cpp  kscontext.h  kscontext_p.h  kscontextcl.cpp  kscontextcl.h  kscontexteigen.cpp  kscontexteigen.h  kstypes.h
kstars/: CMakeLists.txt  astrobinapi.cpp  astrobinapi.h  astrobinapijson.h  astrobinapixml.cpp  astrobinapixml.h  astrobinimage.cpp  astrobinsearchresult.cpp  byteorder.h  geolocation.h  imagepanel.qml  ksalmanac.cpp  ksalmanac.h  ksnumbers.cpp  ksnumbers.h  kspopupmenu.cpp  kspopupmenu.h  kstars.cpp  kstars.h  kstars.kcfg  kstars.notifyrc  kstarsactions.cpp  kstarsdata.cpp  kstarsdata.h  kstarsdatetime.cpp  kstarsdbus.cpp  kstarsdcop.cpp  kstarsinit.cpp  kstarslite.cpp  kstarslite.h  kstarsliteinit.cpp  kstarssplash.cpp  kstarssplash.h  ksutils.cpp  ksutils.h  main.cpp  nan.h  org.kde.kstars.Ekos.Mount.xml  org.kde.kstars.xml  satellitegroup.cpp  (+24 more)
kstars/auxiliary/: QProgressIndicator.cpp  QProgressIndicator.h  binfilehelper.cpp  binfilehelper.h  cachingdms.cpp  cachingdms.h  colorscheme.cpp  colorscheme.h  ctkrangeslider.cpp  ctkrangeslider.h  dms.cpp  dms.h  filedownloader.cpp  filedownloader.h  fov.cpp  fov.h  geolocation.cpp  geolocation.h  imageexporter.cpp  imageexporter.h  imageviewer.cpp  imageviewer.h  ksdssdownloader.cpp  ksdssdownloader.h  ksdssimage.cpp  ksdssimage.h  ksfilereader.cpp  ksfilereader.h  ksmessagebox.cpp  ksmessagebox.h  ksnotification.cpp  ksnotification.h  kspaths.cpp  kspaths.h  ksuserdb.cpp  ksuserdb.h  ksutils.cpp  ksutils.h  kswizard.cpp  kswizard.h  (+20 more)
kstars/catalogsdb/: catalogsdb.cpp  catalogsdb.h  sqlstatements.cpp
kstars/data/: CMakeLists.txt  NGCIC2012.csv  OpenNGC.kscat  imagepanel.qml  sgpanel.qml  skyguides.xml
kstars/dialogs/: addcatalogobject.cpp  addcatalogobject.h  addcatdialog.h  addlinkdialog.cpp  addlinkdialog.h  catalogcoloreditor.cpp  catalogcoloreditor.h  catalogcsvimport.cpp  catalogcsvimport.h  catalogdetails.cpp  catalogdetails.h  catalogeditform.cpp  catalogeditform.h  catalogsdbui.h  (+21 more)
src/: CMakeLists.txt
src/datacomponents/: CMakeLists.txt  datacomponent.cpp  datacomponent.h  datacomposite.cpp  datacomposite.h  linelistdata.cpp  linelistdata.h
src/ksengine/: CMakeLists.txt  kernels.cl  ksbuffer.cpp  ksbuffer.h  ksbuffer_p.h  ksbuffercl.cpp  ksbuffercl.h  ksbuffereigen.cpp  ksbuffereigen.h  kscontext.cpp  kscontext.h  kscontext_p.h  kscontextcl.cpp  kscontextcl.h  kscontexteigen.cpp  kscontexteigen.h  kstypes.h
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt  testclconvert.cpp  testclconvert.h  testconvertcoord.cpp  testkscontext.cpp  testkscontext.h
tests/parser/: CMakeLists.txt
utils/: final_action.h
(+1106 files in other folders)
